Fix on mobile screens

--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -90,7 +90,7 @@ background/white:#FFFFFF;
 	color:red;
 	position: relative;
 	float:left;
-	margin-top: 1000px;
+	margin-top: 10px;
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
